v0.15
    * ADD : GeoTIFF background plugin (closes #1025)
    * ADD : Grabbing hand icon in signle mouse mode
    * FIX : Layers menu entry for background layer is wrong at startup. Patch by Trav (closes #2641)
    * ADD : When in "single mouse button" mode, allow to cancel most operation with a right-click
    * ADD : "Zoom lock" mode. Zoom steps are locked to TMS ones and projection is locked to Mercator
    * FIX : get sharper Yahoo images (closes #2623)
    * FIX : tag value "Fast food" should be "fast_food" (closes #2625)
    * ADD : Add a preference disallowing selection of relations when hidden
    * ADD : add japanese and ukrainian languages to Windows installer (fixes #2619)
    * ADD : Automatic SVN revision number in about dialog and elsewhere (closes #2208)
    * FIX : URL's in about dialog (fixes #2606)
    * FIX : Export trackpoints time when exporting GPX (fixes #2594)
    * ADD : Virtual nodes allow fast creation of intermediary nodes (closes #821)
    * ADD : Allow to move node in Node creation mode (closes #1910)
    * CHG : Only generate log files on request (--log) on release builds
    * FIX : speedup epsg:4326 projection
    * FIX : WMS projection related bugfixes
    * ADD : Re-added tiled Yahoo! imagery as a plugin
    * ADD : NearMap Austalian TMS to the default list
    * FIX : corrected issues in image downloading
    * FIX : Set "yes" as default to request for saving .mdc file after upload
    * FIX : crash with self-intersecting polygons (fixes #2317)
    * FIX : assert when drawing scale (fixes #2347)
    * FIX : Do not add the "oneway" tag on roundabouts (implied)
    * FIX : crashes on editing style None.mas by Stefan (Konink?) (fixes #2200)
    * FIX : Tiles network patch by Tom Verbeure (refs #2316)
    * FIX : Align nodes patch by Chris Baird (closes #2296)
    * ADD : Mac OS X icon (closes #2254)
    * FIX : Force custom Qt style if Qt runtime version < 4.5.1 (fixes #2204)